--- a/jour1.Rmd
+++ b/jour1.Rmd
@@ -499,42 +499,30 @@ Cela implique la création d’une page dédiée à l'établissement, puis la pu
 
 ---
 
-### Culture : trois types de données .red[concernées par l’ouverture]  
+### Culture : principales catégories de données .red[concernées par l’ouverture]  
 
-* 1 - Les données statistiques et économiques des institutions culturelles (fréquentation, recettes, subventions, etc.)
-* 2 - Les métadonnées culturelles, c’est-à dire les notices bibliographiques et plus largement les données associées aux œuvres (localisation, description, auteur, œuvres associées, prix, propriétaire) 
-* 3 - Les fichiers images et copies numériques des œuvres **entrées dans le domaine public**. 
+* Les **données statistiques** des institutions culturelles : fréquentation, entrées, équipements
+* Les **bases de données des collections** : métadonnées et plus largement les données associées aux œuvres (localisation, description, auteur, œuvres associées, prix, propriétaire) avec images ou sans image
+* Les **listes de structures** : musées, monuments, cinéma, etc.
+* Les référentiels ou nomenclatures 
+* Les données de type **agenda**, événements, programmations
+* Les **données financières** : financement, ressources, budgets annuels, subventions
 
 > Important : les œuvres protégées par le droit d’auteur ou un droit voisin ne peuvent faire l’objet d’un droit de réutilisation, mais les œuvres entrées dans le domaine public relèvent pleinement de l’ouverture des données publiques.
 
 ---
 
-### Zoom sur le régime de la réutilisation des données et .red[le régime dérogatoire pour le secteur culturel]
+### Le saviez-vous ?
 
-Le code des relations entre le public et l'administration (CRPA) pose le .red[principe de la gratuité de la réutilisation]. **La tarification est l’exception et n’est autorisée que dans deux cas** : 
+Suite à une consultation publique menée par le ministère qui invitait les citoyens à répondre à la question : “quelles sont les données publiques culturelles stratégiques que vous souhaitez voir ouvertes à la réutilisation libre et gratuite ?”
 
-* Lorsque les administrations sont tenues de couvrir par des recettes propres une part substantielle des coûts liés à l’accomplissement de leurs missions de service public (25 % minimum). Cette disposition ne concerne aucun établissement culturel. 
+La consultation avait mis en avant trois types de données publiques particulièrement recherchées :
 
-* Lorsque la réutilisation porte sur « des informations issues des opérations de numérisation des fonds et des collections des bibliothèques, y compris des bibliothèques universitaires, des musées et des archives et, le cas échéant, sur des informations qui y sont associées lorsque ces dernières sont commercialisées conjointement ». 
+* 1- Les données statistiques et économiques des institutions culturelles (fréquentation, subventions…) 
 
-> Les données publiques nativement numériques ne peuvent pas faire l'objet d'une redevance.
+* 2- Les métadonnées culturelles
 
----
-
-### Réutiliser des informations publiques .red[dans le domaine de la culture]
-
-> La réutilisation d'informations publiques ne peut faire l'objet d'un droit d'exclusivité accordé à un tiers, sauf si un tel droit est nécessaire à l'exercice d'une mission de service public. Lorsqu'un tel droit est accordé, la période d'exclusivité ne peut dépasser dix ans. 
-
-**Lorsqu'un droit d'exclusivité est accordé pour "les besoins de la numérisation de ressources culturelles", la période d'exclusivité peut être supérieure à dix ans sans dépasser quinze ans.** 
-
-L'application d’une redevance est un recours permis par la loi, pas une obligation : 
-
-> En juillet 2017, les Archives nationales se sont engagées dans l’Open data en consacrant le principe de gratuité pour toute réutilisation aux ressources libres de droits qu’elles conservent.
-
----
-class: inverse, center, middle
-
-### Exercice : Créer votre première datavisualisation avec les données de data.culture.gouv.fr  
+* 3- Les fichiers images et copies numériques des œuvres entrées dans le domaine public.
 
 ---
 
@@ -737,6 +725,31 @@ Hors de ces cas, il faut .red[**[anonymiser les données](https://github.com/SGM
 
 ---
 
+### Zoom sur le régime de la réutilisation des données et .red[le régime dérogatoire pour le secteur culturel]
+
+Le code des relations entre le public et l'administration (CRPA) pose le .red[principe de la gratuité de la réutilisation]. **La tarification est l’exception et n’est autorisée que dans deux cas** : 
+
+* Lorsque les administrations sont tenues de couvrir par des recettes propres une part substantielle des coûts liés à l’accomplissement de leurs missions de service public (25 % minimum). Cette disposition ne concerne aucun établissement culturel. 
+
+* Lorsque la réutilisation porte sur « des informations issues des opérations de numérisation des fonds et des collections des bibliothèques, y compris des bibliothèques universitaires, des musées et des archives et, le cas échéant, sur des informations qui y sont associées lorsque ces dernières sont commercialisées conjointement ». 
+
+> Les données publiques nativement numériques ne peuvent pas faire l'objet d'une redevance.
+
+---
+
+### Réutiliser des informations publiques .red[dans le domaine de la culture]
+
+> La réutilisation d'informations publiques ne peut faire l'objet d'un droit d'exclusivité accordé à un tiers, sauf si un tel droit est nécessaire à l'exercice d'une mission de service public. Lorsqu'un tel droit est accordé, la période d'exclusivité ne peut dépasser dix ans. 
+
+**Lorsqu'un droit d'exclusivité est accordé pour "les besoins de la numérisation de ressources culturelles", la période d'exclusivité peut être supérieure à dix ans sans dépasser quinze ans.** 
+
+L'application d’une redevance est un recours permis par la loi, pas une obligation : 
+
+> En juillet 2017, les Archives nationales se sont engagées dans l’Open data en consacrant le principe de gratuité pour toute réutilisation aux ressources libres de droits qu’elles conservent.
+
+
+---
+
 class: inverse, center, middle
 
 # Prenons maintenant connaissance des principes généraux d'ouverture des données et regardons leur application concrète
@@ -800,19 +813,6 @@ class: center, middle
 ### 4. Des données .red[accessibles] 
 
 > **Les données doivent être utilisables par le plus grand nombre d’usagers potentiels**
-
----
-
-### .red[Contre-exemple] : les Archives de la Planète du musée Albert Kahn
-
-> **La réutilisation commerciale des images y est interdite**
-
-* La collection d'autochromes d'Albert Kahn de 72 000 photographies en couleur sur plaques de verre prises entre 1909 et 1931 dans plus de 50 pays, 
-
-.center[![](./img/collections.albert-kahn.png)]
-
-http://collections.albert-kahn.hauts-de-seine.fr/
-
 
 ---
 class: center, middle
@@ -926,6 +926,17 @@ Crédits	© Musée départemental d’Arts et Traditions populaires
 .pull-right[
 <img src="./img/chateau-musee-70.png" height="250"/>
 ]
+
+---
+### .red[Des collections en partage] : une pratique d'ouverture réalisée par .red[le musée de Bretagne]
+
+En 2017, la plateforme **collections.musee-bretagne.fr** propose ses collections en téléchargement gratuit. Une volonté de la métropole de Rennes de rendre accessibles les collections, participant ainsi à la consolidation de sa politique d’ouverture des données. La licence appliquée autorise la réutilisation des documents (images et notices), y compris à des fins commerciales.
+
+> **Environ 170 000 objets et documents numérisés sont concernés par cette ouverture des collections**. 
+
+.center[<img src="./img/fileuse_morbihan.jpg" height="200"/>]
+
+*Fileuse (Morbihan) – Négatif sur verre – Jeanne-Marie Barbey (1876-1960), début 20ème siècle – CC BY SA*
 
 ---
 class: inverse, center, middle
@@ -1082,11 +1093,11 @@ En savoir plus :  [Un projet issu du Hackathon de la BnF](http://gallicastudio.b
 
 Plus de 3,3 millions de fiches y sont actuellement présentes, issues des bases historiques du ministère.
 
-* POP propose plusieurs types de recherche, répondant à tous les modes d’interrogation, du plus large au plus précis : une recherche par texte libre, par facettes, une recherche cartographique ainsi qu'une recherche avancée par base de données.
+* POP propose plusieurs types de recherche : une recherche par texte libre, par facettes, une recherche cartographique ainsi qu'une recherche avancée par base de données.
 
 * Conçue et développée dans le cadre d’une start-up d’État soutenue par les services du Premier ministre, POP a vocation à remplacer l’ancien système de bases de données du ministère de la Culture, utilisé depuis les années 1970.
 
-* La plate-forme permet le versement de métadonnées en interne (images, photographies, informations descriptives ou réglementaires). 
+* La plate-forme permet de verser l’essentiel des métadonnées (à ce stade pas les images) sur les plateformes data.culture.gouv.fr et data.gouv.fr
 
 
 ![](./img/POP.png)
