--- a/jour1.Rmd
+++ b/jour1.Rmd
@@ -414,7 +414,7 @@ class: inverse, center, middle
 * **Mission Société Numérique de l'Agence du Numérique** : Structure les acteurs de l’accompagnement au numérique et les stratégies numériques des territoires, dont l'open data fait partie.
 
 Au ministère de la Culture :
-* **DIN** (Département de l'innovation numérique) : chargé d’identifier au ministère et dans les établissements culturels, les informations produites dans le cadre des missions de service public, de coordonner leur recensement, leur qualification, et la mise à disposition en données ouvertes qui ont vocation à être librement accessibles et gratuitement réutilisables.
+* **DIN** (Département de l'innovation numérique) : chargé d’identifier au ministère et dans les établissements culturels, les informations produites dans le cadre des missions de service public, de coordonner leur recensement, leur qualification, et la mise à disposition en données ouvertes qui ont vocation à être librement accessibles et gratuitement réutilisables. ( _n’hésitez pas à le contacter pour toute question sur l'Open data_ )
 
 ---
 
@@ -537,7 +537,7 @@ La consultation avait mis en avant trois types de données publiques particuliè
 
 class: inverse, center, middle
 
-# 3 - Éléments juridiques relatifs à l'ouverture des données
+# 4 - Éléments juridiques relatifs à l'ouverture des données
 
 ---
 
@@ -724,6 +724,25 @@ Le document ne peut être publié qu'après avoir fait l'objet d'un traitement p
 d'.red[**occulter les mentions protégées**]. L’administration n’est pas tenue de publier un document lorsque “les travaux d’occultation dénatureraient ou videraient de sens le document” ou si “le document est indivisible ou l’occultation est trop complexe”.
 
 ---
+### .red[Les données à particulièrement exclure] du périmètre de l'open data
+
+(Dans le cas où vous souhaiteriez en publier, mais vous n'êtes pas sûr.e)
+
+**Les informations sur lesquelles des tiers détiennent des droits de propriété intellectuelle**
+
+* Notamment celles contenues dans des documents sur lesquels des tiers détiennent
+des droits de propriété intellectuelle ; 
+
+* Exemples : 
+Vous voulez publier des images ? Il faut s'assurer d'abord que :
+
+> * 1 / les oeuvres représentées sur ces images appartienent au domaine public
+> * 2 / vérifier les droits d'auteur du/de la photographe 
+> * 3 / vérifier si un contrat de cession existe entre l'établissement et le/la photographe
+> * 4 / vérifier si les métadonnées contiennent une "description longue"
+d'une notice où un droit d'auteur s'applique (le droit d'auteur de l'agent public)
+
+---
 ### Le cas des .red[données personnelles]
 
 La prohibition de la communication à des tiers ne porte pas sur les données personnelles en général, mais .red[**sur les données à caractère personnel relevant de la vie privée**] des personnes concernées (âge, coordonnées personnelles, situation patrimoniale et financière, sympathies politiques, les croyances religieuses…)
@@ -740,9 +759,10 @@ Hors de ces cas, il faut .red[**[anonymiser les données](https://github.com/SGM
 
 ### La réutilisation des données et .red[le régime dérogatoire pour le secteur culturel]
 
-Le code des relations entre le public et l'administration (CRPA) pose le .red[principe de la gratuité de la réutilisation]. **La tarification est l’exception et n’est autorisée que dans deux cas** : 
+> "Seuls les documents librement communicables à tous (au sens de la loi) et sur lesquels des tiers ne détiennent pas de droits de P.I sont des « informations
+publiques » et relèvent du droit de réutilisation."
 
-* Lorsque les administrations sont tenues de couvrir par des recettes propres une part substantielle des coûts liés à l’accomplissement de leurs missions de service public (25 % minimum). Cette disposition ne concerne aucun établissement culturel. 
+Le code des relations entre le public et l'administration (CRPA) pose le .red[principe de la gratuité de la réutilisation]. **La tarification est l’exception et n’est autorisée que dans deux cas** : 
 
 * Lorsque la réutilisation porte sur « des informations issues des opérations de numérisation des fonds et des collections des bibliothèques, y compris des bibliothèques universitaires, des musées et des archives et, le cas échéant, sur des informations qui y sont associées lorsque ces dernières sont commercialisées conjointement ». 
 
@@ -954,7 +974,7 @@ En 2017, la plateforme **collections.musee-bretagne.fr** propose ses collections
 ---
 class: inverse, center, middle
 
-# 4 État-Plateforme et gouvernement ouvert
+# 5 - État-Plateforme et gouvernement ouvert
 
 ---
 
@@ -1014,7 +1034,7 @@ et initiatives *d’innovation ouverte* au sein de l’Etat, le *Ministère de l
 
 class: inverse, center, middle
 
-# 5. Les projets emblématiques de l’open data culturel
+# 6 - Les projets emblématiques de l’open data culturel
 
 ---
 
@@ -1267,7 +1287,7 @@ Exemple : **impliquer une école de graphisme à réaliser des visualisations**
 
 class: inverse, center, middle
 
-# 6 - Concevoir une stratégie open data
+# 7 - Concevoir une stratégie open data
 
 ---
 
@@ -1336,6 +1356,18 @@ Une bonne stratégie consiste à réduire les frictions :
 
 #### Rester à l'écoute et interagir avec les usagers 
 * Prévoir des boucles de participation
+
+---
+
+### Bibliographie
+
+* **Guide pratique dédié à l’ouverture des données publiques culturelles**
+Publié par le ministère de la Culture, juillet 2019, URL : http://www.culture.gouv.fr/Media/Thematiques/Innovation-numerique/Folder/Guide-pratique-dedie-a-l-ouverture-des-donnees-publiques-culturelles
+
+* **Numérisation et valorisation des contenus culturels : guide ouverture et réutilisation des informations publiques numériques du secteur culturel**
+Publié par le ministère de la Culture, 2017, URL : http://www.culture.gouv.fr/Media/Thematiques/Innovation-numerique/Folder/Livrables-GT-Numerisation/Numerisation-et-valorisation-des-contenus-culturels-guide-ouverture-et-reutilisation-des-informations-publiques-numeriques-du-secteur-culturel
+
+* **Guide de bonnes pratiques en matière de propriété littéraire et artistique** Publié par le ministère de la Culture, 2017, URL : http://www.culture.gouv.fr/Media/Thematiques/Innovation-numerique/Folder/Livrables-GT-Numerisation/Guide-de-bonnes-pratiques-en-matiere-de-propriete-litteraire-et-artistique
 
 ---
 
